--- a/betalen.html
+++ b/betalen.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="betalen.css">
 </head>
 
-<body>
+<body id="betalen">
 	<div class="container">
 		<main id="main">
 			<div id="prijs">PRIJS EUR</div>
