--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                 <figure id="duvel">
 					<img alt="Duvel" src="afbeeldingen/afbeeldingen_dranken/bier/duvel.jpg">
 				</figure>
+		<figure id="ypra">
+					<img alt="Ypra" src="afbeeldingen/afbeeldingen_dranken/bier/ypra.jpg">
+				</figure>
+		<figure id="ypra00">
+					<img alt="Ypra00" src="afbeeldingen/afbeeldingen_dranken/bier/ypra00.jpg">
+				</figure>
                 <figure id="kriek">
 					<img alt="Kriek MAX" src="afbeeldingen/afbeeldingen_dranken/bier/kriek.jpg">
 				</figure>
@@ -85,9 +91,6 @@
 				<legend>Overige</legend>
 				<figure id="chips">
 					<img alt="Chips" src="afbeeldingen/afbeeldingen_dranken/overige/chips.JPG">
-				</figure>
-				<figure id="aperobordje">
-					<img alt="Aperobordje" src="afbeeldingen/afbeeldingen_dranken/overige/aperobordje.JPG">
 				</figure>
 			</fieldset>
 			<fieldset>
