--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 					<img alt="Duvel" src="afbeeldingen/afbeeldingen_dranken/bier/duvel.jpg">
 				</figure>
 		<figure id="ypra">
-					<img alt="Ypra" src="afbeeldingen/afbeeldingen_dranken/bier/ypra.jpg">
+					<img alt="Ypra" src="afbeeldingen/afbeeldingen_dranken/bier/ypra.JPG">
 				</figure>
 		<figure id="ypra00">
-					<img alt="Ypra00" src="afbeeldingen/afbeeldingen_dranken/bier/ypra00.jpg">
+					<img alt="Ypra00" src="afbeeldingen/afbeeldingen_dranken/bier/ypra00.JPG">
 				</figure>
                 <figure id="kriek">
 					<img alt="Kriek MAX" src="afbeeldingen/afbeeldingen_dranken/bier/kriek.jpg">
