--- a/index.html
+++ b/index.html
@@ -14,93 +14,125 @@
 		<main>
 			<fieldset>
 				<legend>Bier</legend>
-				<figure id="bockor">
-					<img alt="Bockor" src="afbeeldingen/afbeeldingen_dranken/bier/bockor.png">
+				<figure id="Pils">
+					<img alt="Pils" src="afbeeldingen/afbeeldingen_dranken/bier/bockor.png">
 				</figure>
-				<figure id="carlsberg">
-					<img alt="Carlsberg 0.0" src="afbeeldingen/afbeeldingen_dranken/bier/carlsberg.png">
+				<figure id="KanPils">
+					<img alt="KanPils" src="afbeeldingen/afbeeldingen_dranken/bier/bierkan.JPG">
 				</figure>
-                <figure id="omer">
-					<img alt="Omer" src="afbeeldingen/afbeeldingen_dranken/bier/omer.png">
+				<figure id="Carlsberg00">
+					<img alt="Carlsberg00" src="afbeeldingen/afbeeldingen_dranken/bier/carlsberg.png">
 				</figure>
-                <figure id="duvel">
-					<img alt="Duvel" src="afbeeldingen/afbeeldingen_dranken/bier/duvel.jpg">
+				<figure id="KriekMAX">
+					<img alt="KriekMAX" src="afbeeldingen/afbeeldingen_dranken/bier/kriek.jpg">
 				</figure>
-		<figure id="ypra">
-					<img alt="Ypra" src="afbeeldingen/afbeeldingen_dranken/bier/ypra.JPG">
+				<figure id="FramboiseMAX">
+					<img alt="FramboiseMAX" src="afbeeldingen/afbeeldingen_dranken/bier/framboise.jpg">
 				</figure>
-		<figure id="ypra00">
-					<img alt="Ypra00" src="afbeeldingen/afbeeldingen_dranken/bier/ypra00.JPG">
-				</figure>
-                <figure id="kriek">
-					<img alt="Kriek MAX" src="afbeeldingen/afbeeldingen_dranken/bier/kriek.jpg">
-				</figure>
-                <figure id="rouge">
+				<figure id="RougeMAX">
 					<img alt="Rouge MAX" src="afbeeldingen/afbeeldingen_dranken/bier/rouge.jpeg">
 				</figure>
+				<figure id="Duvel">
+					<img alt="Duvel" src="afbeeldingen/afbeeldingen_dranken/bier/duvel.jpg">
+				</figure>
+				<figure id="Omer">
+					<img alt="Omer" src="afbeeldingen/afbeeldingen_dranken/bier/omer.png">
+				</figure>
+				<figure id="Ypra04">
+					<img alt="Ypra04" src="afbeeldingen/afbeeldingen_dranken/bier/ypra00.JPG">
+				</figure>
+				<figure id="Kwaremont">
+					<img alt="Kwaremont" src="afbeeldingen/afbeeldingen_dranken/bier/kwaremont.jpg">
+				</figure>
+				<figure id="Blauw">
+					<img alt="Blauw" src="afbeeldingen/afbeeldingen_dranken/bier/blauw.JPG">
+				</figure>
+				<figure id="Ypra">
+					<img alt="Ypra" src="afbeeldingen/afbeeldingen_dranken/bier/ypra.JPG">
+				</figure>
+				<figure id="VDGroodbruin">
+					<img alt="VDGroodbruin" src="afbeeldingen/afbeeldingen_dranken/bier/roodbruin.jpg">
+				</figure>
+				<figure id="Martha">
+					<img alt="Martha" src="afbeeldingen/afbeeldingen_dranken/bier/martha.jpeg">
+				</figure>
 			</fieldset>
+
+			<fieldset>
+				<legend>Wijn en cava</legend>
+				<figure id="Wittewijn">
+					<img alt="WitteWijn" src="afbeeldingen/afbeeldingen_dranken/wijn/witteglas.JPG">
+				</figure>
+				<figure id="Rosewijn">
+					<img alt="RoseWijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roseglas.JPG">
+				</figure>
+				<figure id="Rodewijn">
+			        <img alt="Rodewijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roodglas.JPG">
+			    </figure>
+			    <figure id="Witfles">
+			        <img alt="Witfles" src="afbeeldingen/afbeeldingen_dranken/wijn/wittefles.JPG">
+			    </figure>
+			    <figure id="Rosefles">
+			        <img alt="Rosefles" src="afbeeldingen/afbeeldingen_dranken/wijn/rosefles.JPG">
+			    </figure>
+			    <figure id="Roodfles">
+			        <img alt="Roodfles" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles.JPG">
+			    </figure>
+			    <figure id="Cava">
+			        <img alt="Cava" src="afbeeldingen/afbeeldingen_dranken/wijn/cavaglas.JPG">
+			   </figure>
+			   <figure id="Cavafles">
+			        <img alt="Cavafles" src="afbeeldingen/afbeeldingen_dranken/wijn/cavafles.JPG">
+			   </figure>
+			</fieldset>
+
 			<fieldset>
 				<legend>Frisdrank</legend>
-				<figure id="cola">
+				<figure id="Cola">
 					<img alt="Cola" src="afbeeldingen/afbeeldingen_dranken/frisdrank/cola.JPG">
 				</figure>
-				<figure id="colazero">
-					<img alt="Cola Zero" src="afbeeldingen/afbeeldingen_dranken/frisdrank/colazero.JPG">
+				<figure id="ColaZero">
+					<img alt="ColaZero" src="afbeeldingen/afbeeldingen_dranken/frisdrank/colazero.JPG">
 				</figure>
-				<figure id="fanta">
+				<figure id="Fanta">
 					<img alt="Fanta" src="afbeeldingen/afbeeldingen_dranken/frisdrank/fanta.JPG">
 				</figure>
-				<figure id="icetea">
-					<img alt="Ice-tea" src="afbeeldingen/afbeeldingen_dranken/frisdrank/icetea.JPG">
+				<figure id="Icetea">
+					<img alt="Icetea" src="afbeeldingen/afbeeldingen_dranken/frisdrank/icetea.JPG">
 				</figure>
-				<figure id="platwater">
-					<img alt="Plat water" src="afbeeldingen/afbeeldingen_dranken/frisdrank/platwater.JPG">
+				<figure id="Fruitsap">
+					<img alt="Fruitsap" src="afbeeldingen/afbeeldingen_dranken/frisdrank/fruitsap.JPG">
 				</figure>
-				<figure id="spuitwater">
+				<figure id="Platwater">
+					<img alt="Platwater" src="afbeeldingen/afbeeldingen_dranken/frisdrank/platwater.JPG">
+				</figure>
+				<figure id="Spuitwater">
 					<img alt="Spuitwater" src="afbeeldingen/afbeeldingen_dranken/frisdrank/spuitwater.JPG">
 				</figure>
 			</fieldset>
-			<fieldset>
-				<legend>Wijn en cava</legend>
-				<figure id="witglas">
-					<img alt="Glas witte wijn" src="afbeeldingen/afbeeldingen_dranken/wijn/witteglas.JPG">
-				</figure>
-				<figure id="roseglas">
-					<img alt="Glas rose wijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roseglas.JPG">
-				</figure>
-				<figure id="roodglas">
-					<img alt="Glas rode wijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roodglas.JPG">
-				</figure>
-				<figure id="witfles">
-					<img alt="Fles witte wijn" src="afbeeldingen/afbeeldingen_dranken/wijn/wittefles.JPG">
-				</figure>
-				<figure id="rosefles">
-					<img alt="Fles rose wijn" src="afbeeldingen/afbeeldingen_dranken/wijn/rosefles.JPG">
-				</figure>
-				<figure id="roodfles">
-					<img alt="Fles rode wijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles.JPG">
-				</figure>
-				<figure id="cavaglas">
-					<img alt="Glad cava" src="afbeeldingen/afbeeldingen_dranken/wijn/cavaglas.JPG">
-				</figure>
-				<figure id="cavafles">
-					<img alt="Fles cava" src="afbeeldingen/afbeeldingen_dranken/wijn/cavafles.JPG">
-				</figure>
-			</fieldset>
+		
 			<fieldset>
 				<legend>Overige</legend>
-				<figure id="chips">
+				<figure id="Koffie">
+					<img alt="Koffie" src="afbeeldingen/afbeeldingen_dranken/overige/koffie.JPG">
+				</figure>
+				<figure id="Chips">
 					<img alt="Chips" src="afbeeldingen/afbeeldingen_dranken/overige/chips.JPG">
 				</figure>
 			</fieldset>
+
 			<fieldset>
-				<legend>Nieuwe bekers</legend>
-				<figure id="beker/glas">
-					<img alt="Beker/glas" src="afbeeldingen/afbeeldingen_dranken/beker/beker.JPG">
+				<legend>Bekers</legend>
+				<figure id="NieuweBeker">
+					<img alt="NieuweBeker" src="afbeeldingen/afbeeldingen_dranken/beker/beker.JPG">
 				</figure>
+				<figure id="VuileKan">
+					<img alt="VuileKan" src="afbeeldingen/afbeeldingen_dranken/beker/beker.JPG">
+				</figure>
+
 			</fieldset>
 			<div id="berekenen">BEREKENEN</div>
-			<div id="beker">BEKER</div>
+			<div id="Beker">BEKER</div>
 			
 		</main>
 		<footer>
