--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<img alt="KriekMAX" src="afbeeldingen/afbeeldingen_dranken/bier/kriek.jpg">
 				</figure>
 				<figure id="FramboiseMAX">
-					<img alt="FramboiseMAX" src="afbeeldingen/afbeeldingen_dranken/bier/framboise.jpg">
+					<img alt="FramboiseMAX" src="afbeeldingen/afbeeldingen_dranken/bier/framboise.JPG">
 				</figure>
 				<figure id="RougeMAX">
 					<img alt="Rouge MAX" src="afbeeldingen/afbeeldingen_dranken/bier/rouge.jpeg">
@@ -42,16 +42,16 @@
 					<img alt="Ypra04" src="afbeeldingen/afbeeldingen_dranken/bier/ypra00.JPG">
 				</figure>
 				<figure id="Kwaremont">
-					<img alt="Kwaremont" src="afbeeldingen/afbeeldingen_dranken/bier/kwaremont.jpg">
+					<img alt="Kwaremont" src="afbeeldingen/afbeeldingen_dranken/bier/kwaremont.png">
 				</figure>
 				<figure id="Blauw">
-					<img alt="Blauw" src="afbeeldingen/afbeeldingen_dranken/bier/blauw.JPG">
+					<img alt="Blauw" src="afbeeldingen/afbeeldingen_dranken/bier/blauw.jpg">
 				</figure>
 				<figure id="Ypra">
 					<img alt="Ypra" src="afbeeldingen/afbeeldingen_dranken/bier/ypra.JPG">
 				</figure>
 				<figure id="VDGroodbruin">
-					<img alt="VDGroodbruin" src="afbeeldingen/afbeeldingen_dranken/bier/roodbruin.jpg">
+					<img alt="VDGroodbruin" src="afbeeldingen/afbeeldingen_dranken/bier/roodbruin.JPG">
 				</figure>
 				<figure id="Martha">
 					<img alt="Martha" src="afbeeldingen/afbeeldingen_dranken/bier/martha.jpeg">
@@ -144,3 +144,4 @@
 </body>
 
 </html>
+
