Refactor drink listings and clean up HTML
Removed several beer and wine figures, added new wine figures, and commented out some sections for clarity.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<figure id="Pils">
 					<img alt="Pils" src="afbeeldingen/afbeeldingen_dranken/bier/bockor.png">
 				</figure>
+				<!--
 				<figure id="KanPils">
 					<img alt="KanPils" src="afbeeldingen/afbeeldingen_dranken/bier/bierkan.JPG">
 				</figure>
@@ -35,9 +36,11 @@
 				<figure id="Duvel">
 					<img alt="Duvel" src="afbeeldingen/afbeeldingen_dranken/bier/duvel.jpg">
 				</figure>
+				-->
 				<figure id="Omer">
 					<img alt="Omer" src="afbeeldingen/afbeeldingen_dranken/bier/omer.png">
 				</figure>
+				<!--
 				<figure id="Ypra04">
 					<img alt="Ypra04" src="afbeeldingen/afbeeldingen_dranken/bier/ypra00.JPG">
 				</figure>
@@ -56,6 +59,7 @@
 				<figure id="Martha">
 					<img alt="Martha" src="afbeeldingen/afbeeldingen_dranken/bier/martha.jpeg">
 				</figure>
+				-->
 			</fieldset>
 
 			<fieldset>
@@ -66,7 +70,10 @@
 				<figure id="Rosewijn">
 					<img alt="RoseWijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roseglas.JPG">
 				</figure>
-				<figure id="Rodewijn">
+				<figure id="Rodewijn Les Copains">
+			        <img alt="Rodewijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roodglas.JPG">
+			    </figure>
+				<figure id="Rodewijn Amber & Ash">
 			        <img alt="Rodewijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roodglas.JPG">
 			    </figure>
 			    <figure id="Witfles">
@@ -75,15 +82,20 @@
 			    <figure id="Rosefles">
 			        <img alt="Rosefles" src="afbeeldingen/afbeeldingen_dranken/wijn/rosefles.JPG">
 			    </figure>
-			    <figure id="Roodfles">
+			    <figure id="Roodfles Les Copains">
 			        <img alt="Roodfles" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles.JPG">
 			    </figure>
+				<figure id="Roodfles Amber & Ash">
+			        <img alt="Roodfles" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles.JPG">
+			    </figure>
+				<!--
 			    <figure id="Cava">
 			        <img alt="Cava" src="afbeeldingen/afbeeldingen_dranken/wijn/cavaglas.JPG">
 			   </figure>
 			   <figure id="Cavafles">
 			        <img alt="Cavafles" src="afbeeldingen/afbeeldingen_dranken/wijn/cavafles.JPG">
 			   </figure>
+				-->
 			</fieldset>
 
 			<fieldset>
@@ -97,9 +109,11 @@
 				<figure id="Fanta">
 					<img alt="Fanta" src="afbeeldingen/afbeeldingen_dranken/frisdrank/fanta.JPG">
 				</figure>
+				<!--
 				<figure id="Icetea">
 					<img alt="Icetea" src="afbeeldingen/afbeeldingen_dranken/frisdrank/icetea.JPG">
 				</figure>
+				-->
 				<figure id="Fruitsap">
 					<img alt="Fruitsap" src="afbeeldingen/afbeeldingen_dranken/frisdrank/fruitsap.JPG">
 				</figure>
@@ -110,7 +124,8 @@
 					<img alt="Spuitwater" src="afbeeldingen/afbeeldingen_dranken/frisdrank/spuitwater.JPG">
 				</figure>
 			</fieldset>
-		
+
+			<!--
 			<fieldset>
 				<legend>Overige</legend>
 				<figure id="Koffie">
@@ -129,10 +144,13 @@
 				<figure id="VuileKan">
 					<img alt="VuileKan" src="afbeeldingen/afbeeldingen_dranken/beker/VuileKan.JPG">
 				</figure>
-
+			-->
+			
 			</fieldset>
 			<div id="berekenen">BEREKENEN</div>
+			<!--
 			<div id="Beker">BEKER</div>
+			-->
 			
 		</main>
 		<footer>
@@ -144,5 +162,6 @@
 </body>
 
 </html>
+
 
 
