Uncomment drink figures in index.html
Restored commented-out figures for various drinks in the HTML.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			    <figure id="Roodfles Les Copains">
 			        <img alt="Roodfles" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles.JPG">
 			    </figure>
-				<figure id="Roodfles Amber & Ash">
+				<figure id="Roodfles Amber Ash">
 			        <img alt="Roodfles" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles.JPG">
 			    </figure>
 				<!--
@@ -162,6 +162,7 @@
 </body>
 
 </html>
+
 
 
 
