--- a/index.html
+++ b/index.html
@@ -70,11 +70,16 @@
 				<figure id="Rosewijn">
 					<img alt="RoseWijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roseglas.JPG">
 				</figure>
-				<figure id="Rodewijn Les Copains">
+				<!--
+				<figure id="Rodewijn">
 			        <img alt="Rodewijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roodglas.JPG">
 			    </figure>
-				<figure id="Rodewijn Amber & Ash">
-			        <img alt="Rodewijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roodglas.JPG">
+				-->
+				<figure id="Rodewijn Les Copains">
+			        <img alt="Rodewijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roodglas_les_copains.JPG">
+			    </figure>
+				<figure id="Rodewijn Amber Ash">
+			        <img alt="Rodewijn Amber Ash" src="afbeeldingen/afbeeldingen_dranken/wijn/roodglas_amber_ash.JPG">
 			    </figure>
 			    <figure id="Witfles">
 			        <img alt="Witfles" src="afbeeldingen/afbeeldingen_dranken/wijn/wittefles.JPG">
@@ -82,11 +87,16 @@
 			    <figure id="Rosefles">
 			        <img alt="Rosefles" src="afbeeldingen/afbeeldingen_dranken/wijn/rosefles.JPG">
 			    </figure>
-			    <figure id="Roodfles Les Copains">
+				<!--
+				<figure id="Roodfles">
 			        <img alt="Roodfles" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles.JPG">
 			    </figure>
+				-->
+			    <figure id="Roodfles Les Copains">
+			        <img alt="Roodfles" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles_les_copains.JPG">
+			    </figure>
 				<figure id="Roodfles Amber Ash">
-			        <img alt="Roodfles" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles.JPG">
+			        <img alt="Roodfles" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles_amber_ash.JPG">
 			    </figure>
 				<!--
 			    <figure id="Cava">
@@ -162,6 +172,7 @@
 </body>
 
 </html>
+
 
 
 
