--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 			        <img alt="Rodewijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roodglas.JPG">
 			    </figure>
 				-->
-				<figure id="Rodewijn Les Copains">
+				<figure id="Rodewijn_Les_Copains">
 			        <img alt="Rodewijn" src="afbeeldingen/afbeeldingen_dranken/wijn/roodglas_les_copains.JPG">
 			    </figure>
-				<figure id="Rodewijn Amber Ash">
+				<figure id="Rodewijn_Amber_Ash">
 			        <img alt="Rodewijn Amber Ash" src="afbeeldingen/afbeeldingen_dranken/wijn/roodglas_amber_ash.JPG">
 			    </figure>
 			    <figure id="Witfles">
@@ -92,10 +92,10 @@
 			        <img alt="Roodfles" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles.JPG">
 			    </figure>
 				-->
-			    <figure id="Roodfles Les Copains">
+			    <figure id="Roodfles_Les_Copains">
 			        <img alt="Roodfles" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles_les_copains.JPG">
 			    </figure>
-				<figure id="Roodfles Amber Ash">
+				<figure id="Roodfles_Amber_Ash">
 			        <img alt="Roodfles" src="afbeeldingen/afbeeldingen_dranken/wijn/roodfles_amber_ash.JPG">
 			    </figure>
 				<!--
@@ -170,6 +170,7 @@
 </body>
 
 </html>
+
 
 
 
