--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 				<figure id="Omer">
 					<img alt="Omer" src="afbeeldingen/afbeeldingen_dranken/bier/omer.png">
 				</figure>
+				<figure id="Chimay">
+					<img alt="Chimay" src="afbeeldingen/afbeeldingen_dranken/bier/chimay.jpg">
+				</figure>
 				<!--
 				<figure id="Ypra04">
 					<img alt="Ypra04" src="afbeeldingen/afbeeldingen_dranken/bier/ypra00.JPG">
@@ -169,6 +172,7 @@
 </body>
 
 </html>
+
 
 
 
